--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
 			<i class="fa fa-bars"></i>
 			<span class="sr-only">Toggle navigation</span>
 			</button>
-			<a href="index.html" class="navbar-brand brand"> SCORILO </a>
+			<a href="index.html" class="navbar-brand brand"> Rush Coffee </a>
 		</div>
 		<div id="navbar-collapse-02" class="collapse navbar-collapse">
 			<ul class="nav navbar-nav navbar-right">
