Added Product Images

--- a/checkout.html
+++ b/checkout.html
@@ -54,7 +54,7 @@
 <div class="container toparea">
 	<div class="underlined-title">
 		<div class="editContent">
-			<h1 class="text-center latestitems">MAKE PAYMENT</h1>
+			<h1 class="text-center latestitems">Payment</h1>
 		</div>
 		<div class="wow-hr type_short">
 			<span class="wow-hr-h">
@@ -85,12 +85,12 @@
 				<tr class="edd_cart_item" id="edd_cart_item_0_25" data-download-id="25">
 					<td class="edd_cart_item_name">
 						<div class="edd_cart_item_image">
-							<img width="25" height="25" src="images/scorilo2-70x70.jpg" alt="">
+							<img width="25" height="25" src="assets/images/R.Gay - 25.jpg" alt="">
 						</div>
-						<span class="edd_checkout_cart_item_title">Audio Item - Single License</span>
+						<span class="edd_checkout_cart_item_title">Robusta Gayo</span>
 					</td>
 					<td class="edd_cart_item_price">
-						 $11.99
+						 Rp. 90.000
 					</td>
 					<td class="edd_cart_actions">
 						<a class="edd_cart_remove_item_btn" href="#">Remove</a>
@@ -109,7 +109,7 @@
 				</tr>
 				<tr class="edd_cart_footer_row">
 					<th colspan="5" class="edd_cart_total">
-						 Total: <span class="edd_cart_amount" data-subtotal="11.99" data-total="11.99">$11.99</span>
+						 Total: <span class="edd_cart_amount" data-subtotal="90.000" data-total="90.000">Rp. 90.000</span>
 					</th>
 				</tr>
 				</tfoot>
@@ -129,18 +129,45 @@
 						<label class="edd-label" for="edd-first">
 						First Name <span class="edd-required-indicator">*</span>
 						</label>
-						<input class="edd-input required" type="text" name="edd_first" placeholder="First name" id="edd-first" value="" required="">
+						<input class="form-control required" type="text" name="edd_first" placeholder="First name" id="edd-first" value="" required="">
 					</p>
 					<p id="edd-last-name-wrap">
 						<label class="edd-label" for="edd-last">
 						Last Name </label>
-						<input class="edd-input" type="text" name="edd_last" id="edd-last" placeholder="Last name" value="">
+						<input class="form-control" type="text" name="edd_last" id="edd-last" placeholder="Last name" value="">
+					</p>
+					<p id="edd-last-name-wrap">
+						<label class="edd-label" for="edd-last">
+						Full Address </label>
+						<input class="form-control" type="text" name="edd_last2" id="edd-last2" placeholder="Full Address" value="">
+					</p>
+					<p id="edd-last-name-wrap">
+						<label class="edd-label" for="edd-last">
+						Phone Number </label>
+						<input class="form-control" type="number" name="edd_last3" id="edd-last3" placeholder="Phone Number" value="">
+					</p>
+					<p id="edd-last-name-wrap">
+						<label class="edd-label" for="edd-last">
+						Courier </label>
+						<select class="form-control" name="kurir">
+							<option value="Lion Parcel">Lion Parcel (Kurir Rekomendasi)</option>
+							<option value="JNE">JNE</option>
+							<option value="SiLambat">Si Lambat</option>
+							<option value="J&T">J&T</option>
+							<option value="POS Indonesia">POS Indonesia</option>
+						</select>
 					</p>
 				</fieldset>
 				<fieldset id="edd_purchase_submit">
 					<p id="edd_final_total_wrap">
+						<strong>Total :</strong>
+						<span class="edd_cart_amount" data-subtotal="90.000" data-total="90.500">Rp. 90.500</span>
+						<br>
+						<strong>Shipping :</strong>
+						<span class="edd_cart_amount" data-subtotal="8.500" data-total="8.500">Rp. 8.500</span>
+						<br>
 						<strong>Purchase Total:</strong>
-						<span class="edd_cart_amount" data-subtotal="11.99" data-total="11.99">$11.99</span>
+						<span class="edd_cart_amount" data-subtotal="98.500" data-total="98.500">Rp. 98.500</span>
 					</p>
 					<input type="hidden" name="edd_action" value="purchase">
 					<input type="hidden" name="edd-gateway" value="manual">
