--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						Rush Coffee
 					</div>
 					<div class="subtext-image" data-scrollreveal="enter bottom over 1.7s after 0.3s">
-						Ini baru namanya KOPI sejati.
+						Ini baru namanya <b>KOPI</b> sejati.
 					</div>
 				</div>
 			</div>
