--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
 			<div class="col-md-12 text-center">
 				<div class="text-pageheader">
 					<div class="subtext-image" data-scrollreveal="enter bottom over 1.7s after 0.0s">
-						 Checkout
+						 <b>CONTACT US</b>
 					</div>
 				</div>
 			</div>
@@ -53,7 +53,7 @@
 <div class="container toparea">
 	<div class="underlined-title">
 		<div class="editContent">
-			<h1 class="text-center latestitems">Contact Us</h1>
+			<h1 class="text-center latestitems">Please fill this field form</h1>
 		</div>
 		<div class="wow-hr type_short">
 			<span class="wow-hr-h">
