--- a/shop.html
+++ b/shop.html
@@ -69,9 +69,9 @@
 			<div class="productbox">
 				<div class="fadeshop">
 					<div class="captionshop text-center" style="display: none;">
-						<h3>Item Name</h3>
+						<h3>Robusta Gayo</h3>
 						<p>
-							 This is a short excerpt to generally describe what the item is about.
+							Karakter rasa kopi gayo adalah body dan aroma yang kuat. Tingkat keasamannya rendah dengan sedikit rasa rempah (spice). Rasa kopi aceh gayo yang kuat namun tidak pahit membuatnya sangat digemari, terutama di Amerika Serikat dan Eropa. 
 						</p>
 						<p>
 							<a href="#" class="learn-more detailslearn"><i class="fa fa-shopping-cart"></i> Purchase</a>
@@ -82,7 +82,7 @@
 				</div>
 				<div class="product-details">
 					<a href="#">
-					<h1>Calypso Theme</h1>
+					<h1>Robusta Gayo</h1>
 					</a>
 					<span class="edd_price">Rp. 90.000</span>
 					<span class="price">/ 1000 gr</span>
@@ -95,9 +95,9 @@
 			<div class="productbox">
 				<div class="fadeshop">
 					<div class="captionshop text-center" style="display: none;">
-						<h3>Item Name</h3>
+						<h3>Robusta Sidikalang</h3>
 						<p>
-							 This is a short excerpt to generally describe what the item is about.
+							Daerah Sidikalang memang dikenal sebagai penghasil biji kopi robusta terbaik yang memiliki kadar kafein tinggi, yaitu mencapai 70-80%. Berada di kawasan Bukit Barisan, dengan kombinasi kawasan yang sejuk dan dingin serta tanah yang subur. 
 						</p>
 						<p>
 							<a href="#" class="learn-more detailslearn"><i class="fa fa-shopping-cart"></i> Purchase</a>
@@ -108,10 +108,10 @@
 				</div>
 				<div class="product-details">
 					<a href="#">
-					<h1>FastSell Theme</h1>
+					<h1>Robusta Sidikalang</h1>
 					</a>
-					<span class="edd_price">Rp. 90.000</span>
-					<span class="price">/ 1000 gr</span>
+					<span class="edd_price">Rp. 50.000</span>
+					<span class="price">/ 500 gr</span>
 					</span>
 				</div>
 			</div>
@@ -121,9 +121,9 @@
 			<div class="productbox">
 				<div class="fadeshop">
 					<div class="captionshop text-center" style="display: none;">
-						<h3>Item Name</h3>
+						<h3>Arabica Luwak Liar</h3>
 						<p>
-							 This is a short excerpt to generally describe what the item is about.
+							Kopi luwak adalah minuman yang berasal dari biji kopi yang dipanen dari feses luwak liar yang dibersihkan. Minuman ini memiliki rasa yang lebih halus dari kopi pada umumnya, diduga hal ini disebabkan oleh proses fermentasi dalam perut luwak. 
 						</p>
 						<p>
 							<a href="#" class="learn-more detailslearn"><i class="fa fa-shopping-cart"></i> Purchase</a>
@@ -134,10 +134,10 @@
 				</div>
 				<div class="product-details">
 					<a href="#">
-					<h1>Biscaya Theme</h1>
+					<h1>Arabica Luwak Liar</h1>
 					</a>
-					<span class="edd_price">Rp. 90.000</span>
-					<span class="price">/ 1000 gr</span>
+					<span class="edd_price">Rp. 35.000</span>
+					<span class="price">/ 100 gr</span>
 					</span>
 				</div>
 			</div>
@@ -149,9 +149,9 @@
 			<div class="productbox">
 				<div class="fadeshop">
 					<div class="captionshop text-center" style="display: none;">
-						<h3>Item Name</h3>
+						<h3>Arabica Honey</h3>
 						<p>
-							 This is a short excerpt to generally describe what the item is about.
+							Honey Process adalah salah satu dari tiga proses pasca-panen yang umum dipakai di seluruh dunia: 1) Natural atau proses kering, 2) Washed atau proses basah, dan 3) Honey atau proses madu atau sering disebut juga pulped natural
 						</p>
 						<p>
 							<a href="#" class="learn-more detailslearn"><i class="fa fa-shopping-cart"></i> Purchase</a>
@@ -162,10 +162,10 @@
 				</div>
 				<div class="product-details">
 					<a href="#">
-					<h1>Expertum Theme</h1>
+					<h1>Arabica Honey</h1>
 					</a>
-					<span class="edd_price">Rp. 90.000</span>
-					<span class="price">/ 1000 gr</span>
+					<span class="edd_price">Rp. 85.000</span>
+					<span class="price">/ 250 gr</span>
 					</span>
 				</div>
 			</div>
@@ -175,9 +175,9 @@
 			<div class="productbox">
 				<div class="fadeshop">
 					<div class="captionshop text-center" style="display: none;">
-						<h3>Item Name</h3>
+						<h3>Arabica Karo</h3>
 						<p>
-							 This is a short excerpt to generally describe what the item is about.
+							Arabica Karo yang dikembangkan oleh masyarakat karo adalah jenis kopi Arabika. Secara umum, tanaman kopi tumbuh pada ketinggian 500 s/d 2000 mdpl dengan suhu rata-rata 21-24O C
 						</p>
 						<p>
 							<a href="#" class="learn-more detailslearn"><i class="fa fa-shopping-cart"></i> Purchase</a>
@@ -188,10 +188,10 @@
 				</div>
 				<div class="product-details">
 					<a href="#">
-					<h1>Serenity Theme</h1>
+					<h1>Arabica Karo</h1>
 					</a>
 					<span class="edd_price">Rp. 90.000</span>
-					<span class="price">/ 1000 gr</span>
+					<span class="price">/ 500 gr</span>
 					</span>
 				</div>
 			</div>
@@ -201,9 +201,9 @@
 			<div class="productbox">
 				<div class="fadeshop">
 					<div class="captionshop text-center" style="display: none;">
-						<h3>Item Name</h3>
+						<h3>Arabica Long Berry</h3>
 						<p>
-							 This is a short excerpt to generally describe what the item is about.
+							Kopi Longberry adalah jenis kopi arabika yang memiliki bentuk fisik panjang dan lebih besar dibandingkan bentuk fisik kopi pada umumnya. Jumlah jenis Kopi Longberry tidak banyak diperoleh pada saat musim panen, sehingga supplynya terbatas.
 						</p>
 						<p>
 							<a href="#" class="learn-more detailslearn"><i class="fa fa-shopping-cart"></i> Purchase</a>
@@ -214,9 +214,9 @@
 				</div>
 				<div class="product-details">
 					<a href="#">
-					<h1>Hypnosa Theme</h1>
+					<h1>Arabica Long Berry</h1>
 					</a>
-					<span class="edd_price">Rp. 90.000</span>
+					<span class="edd_price">Rp. 180.000</span>
 					<span class="price">/ 1000 gr</span>
 					</span>
 				</div>
