--- a/checkout.html
+++ b/checkout.html
@@ -40,7 +40,7 @@
 			<div class="col-md-12 text-center">
 				<div class="text-pageheader">
 					<div class="subtext-image" data-scrollreveal="enter bottom over 1.7s after 0.0s">
-						 Checkout
+						 <b>CHECKOUT</b>
 					</div>
 				</div>
 			</div>
