Added Promo Code

--- a/checkout.html
+++ b/checkout.html
@@ -148,6 +148,11 @@
 					</p>
 					<p id="edd-last-name-wrap">
 						<label class="edd-label" for="edd-last">
+						Voucher </label>
+						<input class="form-control" type="text" name="voucher" id="voucher" placeholder="Please enter your promo code" value="">
+					</p>
+					<p id="edd-last-name-wrap">
+						<label class="edd-label" for="edd-last">
 						Courier </label>
 						<select class="form-control" name="kurir">
 							<option value="Lion Parcel">Lion Parcel (Kurir Rekomendasi)</option>
